xidlc/tests/invalid/http_stream_invalid_codec.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidStreamCodecService {
    @server-stream
    @stream-codec("yaml")
    @get(path = "/events")
    string watch();
};
